--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
-  - cp /config/database.yml.sample /config/database.yml
+  - cp config/database.yml.sample config/database.yml
   - psql -c 'create database iota-project_test' -U postgres
 deploy:
   provider: heroku
