--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -6,12 +6,12 @@ local: &local
 
 development:
   <<: *local
-  database: iota-project_dev
+  database: iota_project_dev
 
 test:
   <<: *local
-  database: iota-project_test
+  database: iota_project_test
 
 production:
   <<: *local
-  database: iota-project_production
+  database: iota_project_production
