--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
   - cp config/database.yml.sample config/database.yml
-  - psql -c 'create database iota-project_test' -U postgres
+  - psql -c 'create database iota_project_test' -U postgres
 deploy:
   provider: heroku
   api_key: 5f124ede-0ad0-4b74-958e-9057685aa737
